--- a/Lab6Live/02-X-Y.qmd
+++ b/Lab6Live/02-X-Y.qmd
@@ -66,7 +66,7 @@ Task
 ::::{.question-container .webex-check}
 Complete the code below draw 20,000 samples of size 120 from the $N(90,\, 12)$ distribution and save the mean of each sample in a vector called `meansX`.
 
-Let `m` represent the number of samples you want to draw, and `nx` represent the size each sample should be i.e. $n_X$
+Let `m` represent the number of samples you want to draw, and `nx` represent the size each sample should be i.e. $n_X$.
 
 ::: panel-tabset
 ## R Code
@@ -145,12 +145,18 @@ We know that $\bar X-\bar Y$ follows the $N\Big(50,\,\sqrt{\textstyle\frac{12^2}
 ## R Code
 ```{r XY3.1, eval = FALSE}
 ggplot(data = XY) +
-  geom_density(aes(x = diff), fill = "cadetblue3") +
-  stat_function(fun = dnorm, args = list(mean = 50,
+  geom_density(aes(x = diff), 
+               fill = "cadetblue3") +
+  stat_function(fun = dnorm, 
+                args = list(mean = 50,
                 sd = sqrt(12^2/120 + 10^2/96)),
-                geom = "area", col = "black", linetype = 2,
-                fill = "black", alpha = 0.2) +
-  labs(x = expression(bar(X)-bar(Y)), y = "Density")
+                geom = "area", 
+                col = "black", 
+                linetype = 2,
+                fill = "black", 
+                alpha = 0.2) +
+  labs(x = expression(bar(X)-bar(Y)), 
+       y = "Density")
 ```
 
 ## Plots
@@ -211,7 +217,7 @@ Notice how close the empirical probability we calculated from our samples is to 
 
 ---
 
-You can follow a similar example of using R to create a sample sampling distribution for $\bar X-\bar Y$ in Section [6.5.2 Sampling Distribution for $\bar X-\bar Y$ When Sampling from Two Independent Normal Populations](https://read.kortext.com/reader/pdf/92741/375){target="_blank"} in *Probability and Statistics with R*.
+You can follow a similar example of using R to create a sample sampling distribution for $\bar X-\bar Y$ in Section **6.5.2 Sampling Distribution for $\bar X-\bar Y$ When Sampling from Two Independent Normal Populations** in *Probability and Statistics with R*.
 
 
 
