--- a/Lab6/01-clt.qmd
+++ b/Lab6/01-clt.qmd
@@ -33,7 +33,8 @@ Let's look at an example of sampling from different distributions to determine h
 ::::{.question-header}
 Task
 ::::
-::::{.question-container .webex-check}
+::::{.question-container}
+::::{.webex-check}
 If we were to take samples of size $n=2$ from the $\mbox{Unif}(-11,\, 41)$ distribution, what distribution would $\bar X$ follow, according to the Central Limit Theorem?
 
 ```{r mcq-opts1, echo=FALSE}
@@ -44,6 +45,7 @@ opts1 <- sample(c(answer = "$N\\Big(15,\\,\\textstyle\\frac{15}{\\sqrt{2}}\\Big)
 ```
 
 `r longmcq(opts1)`
+::::
 
 `r hide("Solution")`
 If $X\sim\mbox{Unif}(-11,\, 41)$, then we can show that,
@@ -64,7 +66,8 @@ $$
 ::::{.question-header}
 Task
 ::::
-::::{.question-container .webex-check}
+::::{.question-container}
+::::{.webex-check}
 If we were to take samples of size $n=2$ from the $\mbox{Expo}\Big(\textstyle\frac{1}{15}\Big)$ distribution, what distribution would $\bar X$ follow, according to the Central Limit Theorem?
 
 ```{r mcq-opts2, echo=FALSE}
@@ -75,6 +78,7 @@ opts2 <- sample(c(answer = "$N\\Big(15,\\,\\textstyle\\frac{15}{\\sqrt{2}}\\Big)
 ```
 
 `r longmcq(opts2)`
+::::
 
 `r hide("Solution")`
 If $X\sim \mbox{Expo}\Big(\textstyle\frac{1}{15}\Big)$, then we can show that,
@@ -107,7 +111,7 @@ means_expo_2 <- numeric(m)
 
 To draw the samples from each distribution and calculate the mean, a for loop is used. For the Uniform distribution, `runif()` is used to draw a random sample of size $n=2$ from the $\mbox{Unif}(-11,\, 41)$ distribution, and then the function `mean()` is used to calculate the mean of these two values. The for loop stores this mean as one of the values in the vector `means_unif_2`, and repeats until 10,000 random samples have been drawn and used to calculate a mean.
 
-The same process is used to draw the samples from the Exponential distribution, except the function `rexp()` is used to draw the random samples (for more details on R's probability functions and flow control, see [Lab 3: Section 4](https://moodle.gla.ac.uk/pluginfile.php/9073238/mod_resource/content/2/03-functions.html){target="_blank"} and [Lab 3: Appendix C](https://moodle.gla.ac.uk/pluginfile.php/9073238/mod_resource/content/2/07-flow.html){target="_blank"} respectively).
+The same process is used to draw the samples from the Exponential distribution, except the function `rexp()` is used to draw the random samples (for more details on R's probability functions see [Lab 5: Section 3](../Lab5/02-functions.html#sec-prob-func){target="_blank"}).
 
 ::: panel-tabset
 ## R Code
@@ -149,21 +153,27 @@ head(means_2)
 ```
 :::
 
-Now, we are ready to plot the two sampling distributions of $\bar X$ from the $\mbox{Unif}(-11,\, 41)$ and $\mbox{Expo}\Big(\textstyle\frac{1}{15}\Big)$ distributions. This can be done using the `ggplot2` package (see [Lab 4: Appendix A](https://moodle.gla.ac.uk/pluginfile.php/9073320/mod_resource/content/2/05-ggplot.html){target="_blank"}) using the following code.
+Now, we are ready to plot the two sampling distributions of $\bar X$ from the $\mbox{Unif}(-11,\, 41)$ and $\mbox{Expo}\Big(\textstyle\frac{1}{15}\Big)$ distributions. This can be done using the `ggplot2` package (see [Lab 4: Appendix A](../Lab4/06-ggplot.html){target="_blank"}) using the following code.
 
 ::: panel-tabset
 ## R Code
 ```{r samp4.1.1, eval = FALSE}
 ggplot(data = means_2) +
-  geom_density(aes(x = mean), fill = "skyblue") +
+  geom_density(aes(x = mean), 
+               fill = "skyblue") +
   facet_grid(distribution ~ .) +
   coord_cartesian(xlim = c(-11, 41)) +
   labs(title = "Simulated sampling distributions of the sample mean",
        subtitle = "Sample size n = 2",
-       x = expression(bar(x)), y = "Density") +
-  stat_function(fun = dnorm, args = list(mean = 15, sd = 15/sqrt(2)),
-                col = "black", linetype = 2, fill = "black",
-                alpha = 0.2, geom = "area")
+       x = expression(bar(x)), 
+       y = "Density") +
+  stat_function(fun = dnorm, 
+                args = list(mean = 15, sd = 15/sqrt(2)),
+                col = "black", 
+                linetype = 2, 
+                fill = "black",
+                alpha = 0.2, 
+                geom = "area")
 ```
 
 ## Plots
@@ -202,10 +212,12 @@ Using `stat_function()` as a layer in a `ggplot2` plot allows you to draw any de
 ::::{.question-header}
 Task
 ::::
-::::{.question-container .webex-check}
+::::{.question-container}
+::::{.webex-check}
 Do you think the the sampling distribution of $\bar X$, when samples of size $n=2$ are taken from the $\mbox{Unif}(-11,\,41)$ distribution, is approximately normal?
 
 `r mcq(c(answer = "Yes", "No", "Can't say"))`
+::::
 ::::
 :::
 
@@ -213,10 +225,12 @@ Do you think the the sampling distribution of $\bar X$, when samples of size $n=
 ::::{.question-header}
 Task
 ::::
-::::{.question-container .webex-check}
+::::{.question-container}
+::::{.webex-check}
 What about the sampling distribution of $\bar X$ when samples of size $n=2$ are taken from the $\mbox{Expo}\Big(\textstyle\frac{1}{15}\Big)$ distribution - is it approximately normal?
 
 `r mcq(c("Yes", answer = "No", "Can't say"))`
+::::
 ::::
 :::
 
@@ -349,15 +363,21 @@ We can then plot the two sampling distributions of $\bar X$ from the $\mbox{Unif
 ## R Code
 ```{r samp8.1, eval = FALSE}
 ggplot(data = subset(means, subset = (size == "n = 10"))) +
-  geom_density(aes(x = mean), fill = "skyblue") +
+  geom_density(aes(x = mean), 
+               fill = "skyblue") +
   facet_grid(distribution ~ .) +
   coord_cartesian(xlim = c(-1, 31)) +
   labs(title = "Simulated sampling distributions of the sample mean",
        subtitle = "Sample size n = 10",
-       x = expression(bar(x)), y = "Density") +
-  stat_function(fun = dnorm, args = list(mean = 15, sd = 15/sqrt(10)),
-                geom = "area", col = "black", linetype = 2,
-                fill = "black", alpha = 0.2)
+       x = expression(bar(x)), 
+       y = "Density") +
+  stat_function(fun = dnorm, 
+                args = list(mean = 15, sd = 15/sqrt(10)),
+                geom = "area", 
+                col = "black", 
+                linetype = 2,
+                fill = "black", 
+                alpha = 0.2)
 ```
 
 ## Plots
@@ -380,15 +400,21 @@ We can also show the sampling distributions of $\bar X$ from the Uniform and Exp
 ## R Code
 ```{r samp9.1, eval = FALSE}
 ggplot(data = subset(means, subset = (size == "n = 40"))) +
-  geom_density(aes(x = mean), fill = "skyblue") +
+  geom_density(aes(x = mean), 
+               fill = "skyblue") +
   facet_grid(distribution ~ .) +
   coord_cartesian(xlim = c(6, 24)) +
   labs(title = "Simulated sampling distributions of the sample mean",
        subtitle = "Sample size n = 40",
-       x = expression(bar(x)), y = "Density") +
-  stat_function(fun = dnorm, args = list(mean = 15, sd = 15/sqrt(40)),
-                geom = "area", col = "black", linetype = 2,
-                fill = "black", alpha = 0.2)
+       x = expression(bar(x)), 
+       y = "Density") +
+  stat_function(fun = dnorm, 
+                args = list(mean = 15, sd = 15/sqrt(40)),
+                geom = "area", 
+                col = "black", 
+                linetype = 2,
+                fill = "black", 
+                alpha = 0.2)
 ```
 
 ## Plots
@@ -409,7 +435,8 @@ ggplot(data = subset(means, subset = (size == "n = 40"))) +
 ::::{.question-header}
 Task
 ::::
-::::{.question-container .webex-check}
+::::{.question-container}
+::::{.webex-check}
 Complete the code below to plot the sampling distribution of $\bar X$ for the samples of size $n=100$ taken from the $\mbox{Unif}(-11,\, 41)$ and $\mbox{Expo}\Big(\textstyle\frac{1}{15}\Big)$ distributions. Superimpose the normal distribution that each sampling distribution follows according to the Central Limit Theorem.
 
 ::: panel-tabset
@@ -419,7 +446,10 @@ Complete the code below to plot the sampling distribution of $\bar X$ for the sa
 `ggplot(data = subset(means, subset = (size == "n = 100"))) +`
      
 <ul style="margin-top:-1.2em; margin-left:-0.8em;">     
-`r mcq(c("geom_dens", answer="geom_density", "density"))``(aes(x = mean), fill = "skyblue") +`
+`r mcq(c("geom_dens", answer="geom_density", "density"))``(aes(x = mean),`
+</ul>
+<ul style="margin-top:-1em; margin-left:7em;">
+`fill = "skyblue") +`
 </ul>
 <ul style="margin-top:-0.8em; margin-left:-1em;">
 `facet_grid(``r fitb("distribution ~ .")``) +`
@@ -430,14 +460,33 @@ Complete the code below to plot the sampling distribution of $\bar X$ for the sa
 </ul>
 <ul style="margin-top:-1em; margin-left:2em;">
 `subtitle = "Sample size n = 100",`
-`x = expression(bar(x)), y = "Density") +`
+</ul>
+<ul style="margin-top:-1em; margin-left:2em;">
+`x = expression(bar(x)),`
+</ul>
+<ul style="margin-top:-1em; margin-left:2em;">
+`y = "Density") +`
 </ul>
 <ul style="margin-top:-1.2em; margin-left:-1em;">
-`stat_function(fun = dnorm, args = list(mean = ``r fitb(15)``, sd = ``r fitb(c("15/sqrt(100)", "1.5"), width = 10)``),`
+`stat_function(fun = dnorm,` 
 </ul>
 <ul style="margin-top:-1.2em; margin-left:6.4em;">
-`geom = ``r fitb("\"area\"")``, col = "black", linetype = 2,`
-`fill = "black", alpha = 0.2)`
+`args = list(mean = ``r fitb(15)``, sd = ``r fitb(c("15/sqrt(100)", "1.5"), width = 10)``),`
+</ul>
+<ul style="margin-top:-1em; margin-left:6.4em;">
+`geom = ``r fitb("\"area\"")``,`
+</ul>
+<ul style="margin-top:-1em; margin-left:6.4em;">
+`col = "black",`
+</ul>
+<ul style="margin-top:-1.2em; margin-left:6.4em;">
+`linetype = 2,`
+</ul>
+<ul style="margin-top:-1.2em; margin-left:6.4em;">
+`fill = "black",`
+</ul>
+<ul style="margin-top:-1.2em; margin-left:6.4em;">
+`alpha = 0.2)`
 </ul>
 :::
 ## Plots
@@ -454,6 +503,7 @@ ggplot(data = subset(means, subset = (size == "n = 100"))) +
                 alpha = 0.2)
 ```
 :::
+::::
 
 `r hide("Solution")`
 ::: panel-tabset
@@ -492,7 +542,7 @@ ggplot(data = subset(means, subset = (size == "n = 100"))) +
 
 ---
 
-Section [6.5.1.2 Second Case: Sampling Distribution of $\bar X$ When $X$ Is Not a Normal Random Variable](https://read.kortext.com/reader/pdf/92741/370){target="_blank"} of *Probability and Statistics with R* details a similar example of finding the distribution of $\bar X$ through sampling.
+Section **6.5.1.2 Second Case: Sampling Distribution of $\bar X$ When $X$ Is Not a Normal Random Variable** of *Probability and Statistics with R* details a similar example of finding the distribution of $\bar X$ through sampling.
 
 
 
